--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.12.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-kakao-maps-sdk": "^1.2.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.1",
     "redux-thunk": "^3.1.0"
